# yoru

./: .gitignore  CHANGELOG.md  Makefile  README.md  package-lock.json
backend/: .env.example  README.md  pyproject.toml
backend/apps/api/: main.py
backend/apps/api/api/config/: secrets_manager.py
backend/apps/api/api/dependencies/: features.py
backend/apps/api/api/dependencies/auth/: __init__.py
backend/apps/api/api/routers/auth/: cookie_router.py  router.py
backend/apps/api/api/routers/invitations/: router.py
backend/apps/api/api/routers/me/: github_endpoints.py  route_rules_endpoints.py  router.py  workspaces_endpoints.py
backend/apps/api/api/routers/receipt/: dashboard_router.py  db.py  deps.py  events_router.py  models.py  notify.py  public_sessions_router.py  sessions_router.py
backend/apps/api/api/routers/sales/: contact.py
backend/apps/api/api/routers/setup/: router.py
backend/apps/api/api/services/: retention.py
backend/apps/api/api/services/access/: visibility.py
backend/apps/api/api/services/auth/: auth_service.py  local_models.py  local_provider.py  provider.py
backend/apps/api/api/services/group/: group_service.py
backend/apps/api/api/services/heartbeat/: heartbeat_service.py
backend/apps/api/api/services/invitation/: invitation_service.py
backend/apps/api/api/services/notification/: notification_service.py
backend/apps/api/api/services/organization/: organization_service.py
backend/apps/api/api/services/setup/: setup_service.py
backend/apps/api/api/services/subscription/: feature_service.py  grant_service.py  plan_service.py  promo_service.py  subscription_service.py
backend/apps/api/tests/: test_billing_checkout.py  test_billing_webhook.py
backend/apps/api/tests/integration/: conftest.py  test_e2e_v1_auth.py  test_perf_queries.py
backend/apps/api/tests/test_group/: test_group_service.py  test_rbac_middleware.py
backend/apps/api/tests/test_receipt/: conftest.py  test_dashboard.py  test_public_sessions.py  test_sessions.py
backend/docs/: DEPLOYMENT.md  SUPABASE_OPTIMIZATION_GUIDE.md
backend/libs/datastore/: __init__.py  local_store.py
backend/libs/email/: .env.example  README.md  config.py  email_manager.py  test_manual.py
backend/libs/log_manager/: controller.py
backend/libs/log_manager/loki/: handler.py
backend/libs/redis/: README.md  __init__.py
backend/libs/supabase/: README.md
backend/scripts/: setup.py
docs/: SELF-HOST.md  (+1 more)
(+25 files in other folders)
