[project]
name = "overnight-saas-backend"
version = "0.2.1"
description = "Yoru — self-hosted audit trail for autonomous AI coding agents (FastAPI backend)."
requires-python = ">=3.11,<3.13"
readme = "README.md"

dependencies = [
    # --- Base (shared) ---
    # Bumped 2.5 → 2.10+ so polar-sdk (requires ≥2.8.2) can install. FastAPI
    # 0.109 + Supabase 2.7 both support the 2.10 line; deprecations are
    # limited to `@validator` → `@field_validator` (all our models are on the
    # v2 decorator already).
    "pydantic>=2.10.3,<3",
    "pydantic-settings>=2.6.0,<3",
    "python-dotenv>=1.2.2,<2",  # CVE-2026-28684 fixed in 1.2.2 (was hard-pinned 1.0.0)
    "email-validator==2.1.0",
    "aiosmtplib>=2.0.0",
    "Jinja2>=3.1.0",
    "httpx>=0.24.0,<0.28",
    "tenacity==8.2.3",
    # OpenTelemetry
    "opentelemetry-api==1.21.0",
    "opentelemetry-sdk==1.21.0",
    "opentelemetry-instrumentation-fastapi==0.42b0",
    "opentelemetry-instrumentation-httpx==0.42b0",
    "opentelemetry-instrumentation-redis==0.42b0",
    "opentelemetry-exporter-jaeger==1.21.0",
    "opentelemetry-exporter-otlp==1.21.0",
    # --- API service ---
    "fastapi==0.109.1",  # PYSEC-2024-38 (python-multipart) fixed in 0.109.1; starlette CVEs need a 0.11x major (flagged)
    "uvicorn[standard]==0.27.0",
    "supabase>=2.9.1,<3",
    "redis[hiredis]==5.0.1",
    # --- Receipt v0 storage ---
    "sqlmodel==0.0.14",
    # --- Receipt v0 observability ---
    "prometheus-client>=0.19,<0.21",
    # --- Wave-13 rate limiting (in-process; v1 may move to Redis) ---
    "slowapi==0.1.9",
    "stripe>=15.0.1",
    "psycopg[binary]>=3.1",
    # --- TSU-54 shareable receipt PNG (server-side render, self-hosted) ---
    "Pillow>=12.1.1,<13",  # CVE-2026-25990/40192/42309-42311 + PYSEC-2026-165 fixed in 12.x
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6,<0.7",
    "pip-audit>=2.7",
]
observability = [
    "sentry-sdk[fastapi]>=2.0,<3.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests"]
markers = ["integration: hits live backend (not default)"]
addopts = "-m 'not integration'"
